--- a/index.html
+++ b/index.html
@@ -156,6 +156,84 @@
       </div>
     </section>
 
+    <section id="education" class="py-24 px-2 sm:px-8 container max-w-5xl">
+      <div class="grid grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 items-center gap-4">
+          <div class="relative mx-auto">
+            <img
+              src="assets/images/purple_circle_filled.svg"
+              alt="Purple Circle"
+              class="h-24 w-24"
+            />
+            <img
+              src="assets/images/university.svg"
+              alt="University"
+              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
+            />
+          </div>
+
+          <h3 class="text-2xl text-serif text-center">
+            Bachelors of Computer Engineering
+          </h3>
+
+          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <p class="font-semibold text-sm text-center">
+            Tribhuvan University, Institute of Engineering, Pashchimanchal
+            Campus
+          </p>
+          <p class="text-sm text-center">Nov 2019 - Apr 2024</p>
+        </div>
+
+        <div class="grid grid-cols-1 items-center justify-between gap-4">
+          <div class="relative mx-auto">
+            <img
+              src="assets/images/purple_circle_filled.svg"
+              alt="Purple Circle"
+              class="relative h-24 w-24"
+            />
+            <img
+              src="assets/images/high_school.svg"
+              alt="High School"
+              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
+            />
+          </div>
+
+          <h3 class="text-2xl text-serif text-center">High School<br /></h3>
+
+          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <p class="font-semibold text-sm text-center">
+            Valmiki Siksha Sadan, Chitwan
+          </p>
+          <p class="text-sm text-center text-center">2016 - 2018</p>
+        </div>
+
+        <div class="grid grid-cols-1 items-center gap-4 justify-between">
+          <div class="relative mx-auto">
+            <img
+              src="assets/images/purple_circle_filled.svg"
+              alt="Purple Circle"
+              class="relative h-24 w-24"
+            />
+            <img
+              src="assets/images/school.svg"
+              alt="School"
+              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
+            />
+          </div>
+
+          <h3 class="text-2xl text-serif text-center text-center">
+            Secondary Education Examination
+          </h3>
+
+          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <p class="font-semibold text-sm text-center text-center">
+            Sainik Awasiya Mahavidyalaya, Chitwan
+          </p>
+          <p class="text-sm text-center text-center">2012 - 2016</p>
+        </div>
+      </div>
+    </section>
+
     <script src="assets/js/menu.js"></script>
     <script src="assets/js/persona.js" type="module"></script>
     <script src="assets/js/site.js" type="module"></script>
