create research section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       id="about"
       class="container max-w-5xl py-24 mx-auto px-2 sm:px-8 gap-16 flex flex-col sm:flex-row justify-between items-center"
     >
-      <div class="w-1/2">
+      <div class="sm:w-1/2">
         <h1
           class="text-indigo-600 text-3xl md:text-6xl text-center md:text-left italic my-8 text-serif"
         >
@@ -147,7 +147,7 @@
         </p>
       </div>
 
-      <div class="w-1/2">
+      <div class="sm:w-1/2">
         <img
           src="assets/images/subek_sharma.jpg"
           alt="Subek Sharma"
@@ -157,7 +157,12 @@
     </section>
 
     <section id="education" class="py-24 px-2 sm:px-8 container max-w-5xl">
-      <div class="grid grid-cols-3 gap-8">
+      <h1
+        class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
+      >
+        Education
+      </h1>
+      <div class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-8">
         <div class="grid grid-cols-1 items-center gap-4">
           <div class="relative mx-auto">
             <img
@@ -176,7 +181,7 @@
             Bachelors of Computer Engineering
           </h3>
 
-          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <div class="border rounded-full w-full border-indigo-500"></div>
           <p class="font-semibold text-sm text-center">
             Tribhuvan University, Institute of Engineering, Pashchimanchal
             Campus
@@ -200,11 +205,11 @@
 
           <h3 class="text-2xl text-serif text-center">High School<br /></h3>
 
-          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <div class="border rounded-full w-full border-indigo-500"></div>
           <p class="font-semibold text-sm text-center">
             Valmiki Siksha Sadan, Chitwan
           </p>
-          <p class="text-sm text-center text-center">2016 - 2018</p>
+          <p class="text-sm text-center">2016 - 2018</p>
         </div>
 
         <div class="grid grid-cols-1 items-center gap-4 justify-between">
@@ -221,16 +226,63 @@
             />
           </div>
 
-          <h3 class="text-2xl text-serif text-center text-center">
+          <h3 class="text-2xl text-serif text-center">
             Secondary Education Examination
           </h3>
 
-          <div class="border-2 rounded-full w-full border-indigo-500"></div>
+          <div class="border rounded-full w-full border-indigo-500"></div>
           <p class="font-semibold text-sm text-center text-center">
             Sainik Awasiya Mahavidyalaya, Chitwan
           </p>
           <p class="text-sm text-center text-center">2012 - 2016</p>
         </div>
+      </div>
+    </section>
+
+    <section
+      id="research"
+      class="container max-w-5xl py-24 mx-auto px-2 sm:px-8"
+    >
+      <h1
+        class="text-indigo-600 text-3xl md:text-6xl text-center my-8 text-serif"
+      >
+        Research
+      </h1>
+      <div
+        class="gap-8 grid grid-cols-1 sm:grid-cols-2 justify-between items-center"
+      >
+        <div>
+          <p class="text-justify text-xs sm:text-sm md:text-lg my-4">
+            I was involved in data collection at Manipal College of Medical
+            Sciences, Pokhara for clinical research, where each interaction with
+            patients and their families is a chance to craft meaningful
+            research. Seeking and securing consent has become an art, polishing
+            not just my research skills but also sculpting my social finesse.
+            Excited to apply this hands-on experience in my future
+            projects/jobs. Ready to turn every data point into a compelling
+            narrative.
+          </p>
+        </div>
+        <div>
+          <img
+            src="assets/images/data_collection_photo_1.png"
+            alt="Subek Sharma"
+            class="w-2/3 mx-auto"
+          />
+        </div>
+      </div>
+
+      <div class="mt-8 gap-8 grid grid-cols-1 sm:grid-cols-2">
+        <img
+          src="assets/images/data_collection_photo_2.png"
+          alt="Subek Sharma"
+          class="w-2/3 mx-auto"
+        />
+        <img
+          src="assets/images/data_collection_photo_3.png"
+          alt="Subek Sharma"
+          class="w-2/3 mx-auto"
+        />
       </div>
     </section>
 
