move logic to js, fix issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <link rel="stylesheet" href="assets/css/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Subek Sharma</title>
+    <title id="title">
+      <!-- rendered by script --> <script src="assets/js/site.js"
+      type="module"></script> Subek Sharma
+    </title>
   </head>
 
   <body class="relative">
@@ -167,8 +170,14 @@
       >
         Education
       </h1>
-      <div class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-8">
-        <div class="grid grid-cols-1 items-center gap-4">
+      <div
+        id="educationList"
+        class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-8"
+      >
+        <!-- rendered by script -->
+        <script src="assets/js/education.js" type="module"></script>
+
+        <!-- <div class="grid grid-cols-1 items-center gap-4">
           <div class="relative mx-auto">
             <img
               src="assets/images/purple_circle_filled.svg"
@@ -240,7 +249,7 @@
             Sainik Awasiya Mahavidyalaya, Chitwan
           </p>
           <p class="text-sm text-center text-center">2012 - 2016</p>
-        </div>
+        </div> -->
       </div>
     </section>
 
