fix title issue

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
     <link rel="stylesheet" href="assets/css/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title id="title">
-      <!-- rendered by script --> <script src="assets/js/site.js"
-      type="module"></script> Subek Sharma
-    </title>
+    <title id="title">Subek Sharma</title>
   </head>
 
   <body class="relative">
