--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body class="relative">
     <nav
-      class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 mb-2 fixed right-0 left-0 z-50 top-0"
+      class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-500 mb-2 fixed right-0 left-0 z-50 top-0"
     >
       <div id="horizontalMenu" class="py-4 float-right px-2">
         <img
@@ -169,7 +169,7 @@
       </h1>
       <div
         id="educationList"
-        class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-8"
+        class="mt-4 grid grid-cols-1 px-6 md:px-2 md:grid-cols-3 gap-4"
       >
         <!-- rendered by script -->
         <script src="assets/js/education.js" type="module"></script>
@@ -197,7 +197,7 @@
             Tribhuvan University, Institute of Engineering, Pashchimanchal
             Campus
           </p>
-          <p class="text-sm text-center">Nov 2019 - Apr 2024</p>
+          <p class="text-sm text-center">2020 - 2024</p>
         </div>
 
         <div class="grid grid-cols-1 items-center justify-between gap-4">
