fix: logos in education section, other minor styles changed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body class="relative">
     <nav
-      class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-500 mb-2 fixed right-0 left-0 z-50 top-0"
+      class="fixed z-50 top-0 bg-[#f4f1e8] border-b-2 border-b-gray-300 mb-2 fixed right-0 left-0 z-50 top-0"
     >
       <div id="horizontalMenu" class="py-4 float-right px-2">
         <img
@@ -40,24 +40,24 @@
 
         <ul class="hidden sm:flex flex align-center gap-8 ml-auto">
           <li
-            class="border-b-2 border-b-transparent hover:border-b-gray-700 transition-border ease-in-out duration-300"
+            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
           >
             <a href="#home" title="Home" class="font-semibold">Home</a>
           </li>
           <li
-            class="border-b-2 border-b-transparent hover:border-b-gray-700 transition-border ease-in-out duration-300"
+            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
           >
             <a href="#about" title="About" class="font-semibold">About</a>
           </li>
           <li
-            class="border-b-2 border-b-transparent hover:border-b-gray-700 transition-border ease-in-out duration-300"
+            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
           >
             <a href="#projects" title="Projects" class="font-semibold"
               >Projects</a
             >
           </li>
           <li
-            class="border-b-2 border-b-transparent hover:border-b-gray-700 transition-border ease-in-out duration-300"
+            class="border-b-4 border-b-transparent hover:border-b-[#5e17eb] hover:text-[#5e17eb] transition-color transition-border ease-in-out duration-300"
           >
             <a href="#contact" title="Contact" class="font-semibold">Contact</a>
           </li>
@@ -77,22 +77,22 @@
         />
         <ul class="flex flex-col gap-4 p-4">
           <li
-            class="border-b-2 text-gray-600 hover:text-gray-800 hover:border-b-black transition-color duration-300"
+            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
           >
             <a class="" href="#" title="Home">Home</a>
           </li>
           <li
-            class="border-b-2 text-gray-600 hover:text-gray-800 hover:border-b-black transition-color duration-300"
+            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
           >
             <a class="" href="#about" title="About">About</a>
           </li>
           <li
-            class="border-b-2 text-gray-600 hover:text-gray-800 hover:border-b-black transition-color duration-300"
+            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
           >
             <a class="" href="#projects" title="Projects">Projects</a>
           </li>
           <li
-            class="border-b-2 text-gray-600 hover:text-gray-800 hover:border-b-black transition-color duration-300"
+            class="border-b-2 text-gray-600 hover:text-[#5e17eb] hover:border-b-[#5e17eb] transition-color duration-300"
           >
             <a class="" href="#contact" title="Contact">Contact</a>
           </li>
@@ -173,80 +173,6 @@
       >
         <!-- rendered by script -->
         <script src="assets/js/education.js" type="module"></script>
-
-        <!-- <div class="grid grid-cols-1 items-center gap-4">
-          <div class="relative mx-auto">
-            <img
-              src="assets/images/purple_circle_filled.svg"
-              alt="Purple Circle"
-              class="h-24 w-24"
-            />
-            <img
-              src="assets/images/university.svg"
-              alt="University"
-              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
-            />
-          </div>
-
-          <h3 class="text-2xl text-serif text-center">
-            Bachelors of Computer Engineering
-          </h3>
-
-          <div class="border rounded-full w-full border-indigo-500"></div>
-          <p class="font-semibold text-sm text-center">
-            Tribhuvan University, Institute of Engineering, Pashchimanchal
-            Campus
-          </p>
-          <p class="text-sm text-center">2020 - 2024</p>
-        </div>
-
-        <div class="grid grid-cols-1 items-center justify-between gap-4">
-          <div class="relative mx-auto">
-            <img
-              src="assets/images/purple_circle_filled.svg"
-              alt="Purple Circle"
-              class="relative h-24 w-24"
-            />
-            <img
-              src="assets/images/high_school.svg"
-              alt="High School"
-              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
-            />
-          </div>
-
-          <h3 class="text-2xl text-serif text-center">High School<br /></h3>
-
-          <div class="border rounded-full w-full border-indigo-500"></div>
-          <p class="font-semibold text-sm text-center">
-            Valmiki Siksha Sadan, Chitwan
-          </p>
-          <p class="text-sm text-center">2016 - 2018</p>
-        </div>
-
-        <div class="grid grid-cols-1 items-center gap-4 justify-between">
-          <div class="relative mx-auto">
-            <img
-              src="assets/images/purple_circle_filled.svg"
-              alt="Purple Circle"
-              class="relative h-24 w-24"
-            />
-            <img
-              src="assets/images/school.svg"
-              alt="School"
-              class="absolute left-[50%] top-[50%] transform translate-x-[-50%] translate-y-[-50%] w-10 h-10"
-            />
-          </div>
-
-          <h3 class="text-2xl text-serif text-center">
-            Secondary Education Examination
-          </h3>
-
-          <div class="border rounded-full w-full border-indigo-500"></div>
-          <p class="font-semibold text-sm text-center text-center">
-            Sainik Awasiya Mahavidyalaya, Chitwan
-          </p>
-          <p class="text-sm text-center text-center">2012 - 2016</p>
-        </div> -->
       </div>
     </section>
 
