--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           Subek Sharma
         </h1>
         <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-          I am a final semester undergraduate student pursuing a Computer Engineering degree at Paschimanchal Campus, Lamachaur, Pokhara, Nepal affiliated with Tribhuvan University. My academic interests encompass A.I,  Deep Learning, Computer Vision, and their applications in interdisciplinary fields.
+          I am a final semester undergraduate student pursuing a degree in Computer Engineering at Paschimanchal Campus, Lamachaur, Pokhara, Nepal, affiliated with Tribhuvan University. My academic interests lie in the realms of Artificial Intelligence (A.I.), Deep Learning, and Computer Vision, along with their diverse applications across interdisciplinary fields.
         </p>
       </div>
 
