--- a/index.html
+++ b/index.html
@@ -186,14 +186,7 @@
       >
         <div>
           <p class="text-justify text-sm sm:text-base md:text-lg my-4">
-            I was involved in data collection at Manipal College of Medical
-            Sciences, Pokhara for clinical research, where each interaction with
-            patients and their families is a chance to craft meaningful
-            research. Seeking and securing consent has become an art, polishing
-            not just my research skills but also sculpting my social finesse.
-            Excited to apply this hands-on experience in my future
-            projects/jobs. Ready to turn every data point into a compelling
-            narrative.
+            I participated in a clinical research project funded by the University Grants Commission (UGC), collaborating with hospitals to collect data. This experience not only enhanced my research skills but also allowed me to utilize and improve my soft skills, particularly communication and interpersonal skills. Engaging with patients and their relatives to discuss our research and obtain consent for data collection further refined my abilities in these areas.
           </p>
         </div>
         <div>
