--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
       <p
         class="text-center text-base md:text-sm lg:text-2xl max-w-xl my-4 md:my-8"
       >
-        "Empowering progress through the perfect blend of human touch and
-        technological brilliance."
+        "Bringing ideas to life, one pixel at a time."
       </p>
     </section>
 
