--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </ul>
         <ul class="list-disc">
           <a
-            href="https://www.credly.com/users/subek-sharma/badges"
+            href="https://www.coursera.org/account/accomplishments/specialization/certificate/SD5PRKBRHY6Q"
             class="font-semibold underline underline-offset-2"
             >Deep Learning Specialization</a
           >
